--- a/css/general_style.css
+++ b/css/general_style.css
@@ -22,12 +22,44 @@ input {
     padding: .5em;
     margin: 1em;
 }
-/*
-.active {
-    z-index: 99;
-    animation-name: fadeInOut;
-    animation-iteration-count: infinite;
-    animation-duration: 3s;
-    animation-direction: alternate;
+
+button.accordion {
+    background-color: #eee;
+    border-radius: .5em;
+    color: lightsalmon;
+    cursor: pointer;
+    padding: 1.5em;
+    width: 95%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
 }
-*/
+button.accordion.active, button.accordion:hover { /* ACTIVE class */
+    background-color: #ddd;
+}
+div.panel {
+    padding: 0 1.5em;
+    background-color: white;
+    display: none;
+    max-height: 0;
+    overflow: hidden;
+    transition: 0.6s ease-in-out;
+    opacity: 0;
+}
+div.panel.show { /* SHOW class */
+    display: block !important;
+    opacity: 1;
+    max-height: 500px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
+}
+button.accordion:before {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: left;
+    margin-right: 5px;
+}
+
+button.accordion.active:before {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
